ecmascript/parser/tests/test262-error-references/fail/305ebbf168c6d218.js.stderr
error: TS1009
 --> $DIR/tests/test262-parser/fail/305ebbf168c6d218.js:1:6
  |
1 | let x,
  |      ^

